cluster/app-b/k8s/deployment-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-b-deployment
  labels:
    app: app-b

spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-b
  template:
    metadata:
      labels:
        app: app-b
    spec:
      containers:
        - name: app-b
          image: edge_proxy_app-b:latest
          ports:
            - containerPort: 5200
              name: flask-port
          imagePullPolicy: Never
          env:
            - name: POD_IP
              valueFrom:
                fieldRef:
                  fieldPath: status.podIP
---
apiVersion: v1
kind: Service
metadata:
  name: app-b-service
spec:
  type: ClusterIP
  selector:
    app: app-b
  ports:
    - name: app-b-svc-port
      protocol: TCP
      port: 4200
      targetPort: flask-port
